--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .container{
-    height:100vh;
+    height:90vh;
     display: flex;
     flex-direction:row;
     width: 100vw;
@@ -137,7 +137,7 @@ a:hover{
 }
 
 .call-to-action{
-    width: 85vw;
+    width: 85%;
     background-color: rgb(20, 24, 33, 0.7);
     height:100px;
     padding:40px 20px;
@@ -286,4 +286,37 @@ a:hover{
 
 .section-container.bottom .card_suggest:hover i{
     border-radius: 50%;
+}
+
+footer{
+    display:fixed;
+    width: 100vw;
+    height: 10vh;
+    background-color: rgb(41, 41, 41);
+    z-index: 100;
+}
+footer figure{
+    display:flex;
+    align-items: center;
+}
+
+figcaption{
+    color:lightgrey;
+}
+
+figcaption:hover {
+    color:white;
+}
+
+footer figure figcaption h6{
+    font-size:12px;
+
+}
+figcaption span {
+    font-size: 10px;
+}
+
+footer figure img{
+    width: 4%;
+    padding:10px;
 }
