--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
     height:90vh;
     display: flex;
     flex-direction:row;
-    width: 100vw;
+    width: 99vw;
 }
 .menu-container{
     color: #a3a3a3;
@@ -40,7 +40,8 @@
     font-size:14px;
 }
 
-a:hover{
+.menu-container a:hover{
+    border-left:3px solid greenyellow;
     color:white;
 }
 
@@ -94,6 +95,7 @@ a:hover{
 
 .last-section a:hover{
     color:white;
+    border:none;
 }
 
 .last-section a img{
@@ -137,7 +139,7 @@ a:hover{
 }
 
 .call-to-action{
-    width: 85%;
+    width: 80%;
     background-color: rgb(20, 24, 33, 0.7);
     height:100px;
     padding:40px 20px;
@@ -190,6 +192,7 @@ a:hover{
 
 .categories ul li a:hover{
     color:white;
+    border:none;
 }
 .categories ul li a:hover hr{
     display:block;
@@ -218,42 +221,41 @@ a:hover{
     gap:20px;
 }
 
-.card , .card_suggest{
+.card{
     width:calc(( 100% / 6 ) - (100px / 6));
     text-align: center;
     position:relative;
 }
-.card img, .card_suggest img{
-    width:100%;
-    padding-bottom:10px;
 
+.image-wrapper{
+    position: relative;
+    width: 100%;
 }
 
-.card h4, .card_suggest h4{
+.image-wrapper img {
+  width: 100%;
+  display: block;
+  padding-bottom:10px;
+}
+
+.image-wrapper i {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 40px;
+  color: white;
+  z-index: 2;
+}
+
+.card h4{
     font-size:15px;
     padding-bottom:10px;
 }
 
-.card i{
-    display:none;
-    position:absolute;
-    font-size:100px;
-    text-align: center;
-    bottom:100px;
-}
 
-.card:hover i , .card_suggest:hover i{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    background-color:#080b1275;
-    background-size:cover;
-    height:196px;
-    width:196px;
-    text-align:center
-}
-
-.card span, .card_suggest span{
+.card span{
     font-size:12px;
     color:lightgrey;
 }
@@ -261,41 +263,25 @@ a:hover{
 .section-container #sub-title{
     font-size:smaller;
     color:white;
+    margin-bottom:20px;
 }
 
-.section-container .card_suggest{
-    margin-top:40px;
-}
-
-
-.card_suggest i{
-    display:none;
-    position:absolute;
-    font-size:100px;
-    text-align: center;
-    bottom:100px;
-}
-
-.card_suggest:hover i{
-    transform: translateY(60px);
-}
 
 .section-container.bottom  img{
     border-radius: 50%;
 }
 
-.section-container.bottom .card_suggest:hover i{
-    border-radius: 50%;
-}
 
 footer{
     background-color: rgb(41, 41, 41);
+    position:fixed;
     z-index: 100;
+    width: 99vw;
+    height: 10vh;
 }
 .container-footer{
     display:flex;
     align-items: center;
-    gap:170px;
     justify-content: space-evenly;
 }
 
@@ -309,6 +295,7 @@ footer{
 .music-bottom{
     display:flex;
     align-items: center;
+    flex-grow: 0;
 }
 
 figure img{
@@ -335,6 +322,7 @@ figcaption span{
     flex-direction: column;
     align-items: center;
     gap:10px;
+    flex-grow: 1;
 
 }
 .container-mid .icon{
@@ -350,11 +338,130 @@ figcaption span{
 }
 #file{
     color:green;
-    width: 600px;
 }
 
 .container-dx{
     display:flex;
     padding:20px;
     gap:10px;
+    flex-grow: 0;
+}
+
+.container-dx .icon{
+    display:flex;
+    flex-direction: row;
+}
+.icon:hover a{
+    border:none;
+}
+
+
+.image-wrapper:hover i {
+  display: block;
+}
+/* VERSIONI RESPONSIVE */
+
+@media screen and (max-width: 878px){
+
+    .container{
+        height: 90vh;
+    }
+
+    .menu-container{
+        width: 25vw;
+    }
+
+    .general-container{
+        width: 75%;
+    }
+
+    .call-to-action{
+        width: 70vw;
+    }
+
+    .card{
+        width: calc(100% / 5);
+        flex-wrap: wrap;
+    }
+
+    .categories ul{
+        flex-wrap: wrap;
+
+    }
+
+}
+
+@media screen and (max-width:693px) {
+    .container{
+        width: 100%;
+    }
+
+    .menu-container{
+        width: 35vw;
+        padding-left:5px
+    }
+    
+    .menu-section{
+        padding:10px;
+    }
+
+    .menu-section a{
+        font-size:10px;
+        gap:5px
+    }
+
+    .last-section{
+        font-size:10px;
+    }
+
+    .card{
+        width:calc( 43vh / 3 );
+        margin:0 auto;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap:10px;
+        line-height: 1;
+    }
+
+    .categories ul{
+        flex-wrap: wrap;
+    }
+
+    footer{
+        width: 100vw;
+    }
+
+    .container-footer{
+        align-items: center;
+        justify-content: space-between;
+        width:100%;
+        height: auto;
+        margin-top:15px;
+        font-size:14px;
+    }
+    .container-sx{
+        display:flex;
+        flex-grow: 0;
+    }
+    .container-mid{
+        flex-grow: 2;
+        margin:0 10px;
+    }
+    .container-mid .icon{
+        font-size: 14px;
+    }
+    #file_1{
+        font-size:5px;
+    }
+    .container-dx{
+        flex-grow:1;
+    }
+
+    .container-dx .icon{
+        font-size: 14px;
+    }
+}
+
+@media screen and(max-width:552){
+    
 }
